@@ -2,6 +2,10 @@
 
 #include <stdbool.h>
 
+#ifdef __linux__
+#define HAS_FILTER_SSID 1
+#endif
+
 #ifdef __CYGWIN__
 extern bool bQuit;
 #endif
